# moshon-timetable

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  partitions.csv  sdkconfig.defaults  wrangler.toml
.github/workflows/: build.yml  release.yml  stations-refresh.yml
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  cfg.c  cfg.h  demo.c  demo.h  i18n.c  i18n.h  idf_component.yml  main.c  stations.c  stations.h  stations_be.c  stations_be.h  wifi_secrets.h.example
main/assets/: nmbs_logo.c  nmbs_logo.h
main/display/: bsp.c  bsp.h
main/net/: irail.c  irail.h  irail_vehicle.c  irail_vehicle.h  provision_ap.c  provision_ap.h  settings_web.c  settings_web.h  weather.c  weather.h  wifi.c  wifi.h
main/ui/: nmbs_theme.h  ui.c  ui.h
scripts/: conv_logo.py  gen_stations.py
web/: README.md
web/public/: _headers  _redirects  app.js  index.html  style.css
