idf_component_register(
    SRCS
        "main.c"
        "demo.c"
        "stations.c"
        "display/bsp.c"
        "net/wifi.c"
        "net/irail.c"
        "net/irail_vehicle.c"
        "ui/ui.c"
        "assets/nmbs_logo.c"
    INCLUDE_DIRS
        "."
        "display"
        "net"
        "ui"
        "assets"
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp-tls
        mbedtls
        json
        esp_lcd
        driver
        esp_timer
        esp_psram
        lwip
)
