idf_component_register(
    SRCS
        "main.c"
        "cfg.c"
        "demo.c"
        "i18n.c"
        "stations.c"
        "display/bsp.c"
        "net/wifi.c"
        "net/irail.c"
        "net/irail_vehicle.c"
        "net/provision_ap.c"
        "net/settings_web.c"
        "net/weather.c"
        "stations_be.c"
        "ui/ui.c"
        "assets/nmbs_logo.c"
    INCLUDE_DIRS
        "."
        "display"
        "net"
        "ui"
        "assets"
    PRIV_REQUIRES
        nvs_flash
        nvs_sec_provider
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp_http_server
        esp-tls
        mbedtls
        json
        esp_lcd
        driver
        esp_timer
        esp_psram
        esp_https_ota
        app_update
        lwip
)
